--- a/cpp00/ex00/Makefile
+++ b/cpp00/ex00/Makefile
@@ -9,7 +9,7 @@ FLAGS		=		-Wall -Wextra -Werror -std=c++98 -fsanitize=address -g
 
 ## FOLDERS
 INC_PATH	=		incs
-SRC_PATH	=		./
+SRC_PATH	=		srcs
 OBJ_PATH	=		objs
 
 
@@ -19,7 +19,7 @@ SRC_FILES	=	megaphone.cpp
 
 ## PREP
 INCS		=	-I$(INC_PATH)
-SRCS		:=	$(addprefix $(SRC_PATH), $(SRC_FILES))
+SRCS		:=	$(addprefix $(SRC_PATH)/, $(SRC_FILES))
 OBJS		:=	$(patsubst $(SRC_PATH)/%.c,$(OBJ_PATH)/%.o,$(SRCS))
 
 
@@ -31,20 +31,19 @@ $(NAME): $(OBJS)
 	@echo Program $(NAME) ready!!
 
 $(OBJ_PATH)/%.o: $(SRC_PATH)/%.c
-	@mkdir -p $(dir $@)
-	@$(COMP) $(FLAGS) $(INCS) -c $< -o $@
+	mkdir -p $(dir $@)
+	@echo new folder!
+	$(COMP) $(FLAGS) $(INCS) -c $< -o $@
 
 clean:
 	@if [ -d "$(OBJ_PATH)" ]; then \
         rm -rf $(OBJ_PATH); \
     fi
-	@echo Objects successfully deleted!
 
 fclean: clean
 	@if [ -e "$(NAME)" ]; then \
         rm $(NAME); \
     fi
-	@echo Done!!
 
 re: fclean all
 
