--- a/cpp00/ex00/Makefile
+++ b/cpp00/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: codespace <codespace@student.42.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/27 11:17:51 by codespace         #+#    #+#              #
-#    Updated: 2023/12/27 11:19:01 by codespace        ###   ########.fr        #
+#    Updated: 2023/12/27 11:43:37 by codespace        ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -26,11 +26,11 @@ OBJS 		=		$(patsubst %.cpp,%.o,$(SRCS))
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	$(COMP) $(FLAGS) $(OBJS) -o $(NAME)
+	@$(COMP) $(FLAGS) $(OBJS) -o $(NAME)
 	@echo Program $(NAME) ready!!
 
 $(OBJS): $(SRCS)
-	$(COMP) $(FLAGS) -c $< -o $@
+	@$(COMP) $(FLAGS) -c $< -o $@
 
 clean:
 	@rm -f $(OBJS)
