--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -1,11 +1,20 @@
-
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: codespace <codespace@student.42.fr>        +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2023/12/27 11:53:05 by codespace         #+#    #+#              #
+#    Updated: 2023/12/27 11:58:17 by codespace        ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
 
 NAME 		=		phonebook
 
 ##	Compiler and flags
 COMP		=		c++
 FLAGS		=		-Wall -Wextra -Werror -std=c++98 -fsanitize=address -g
-
 
 ## FOLDERS
 INC_PATH	=		incs
@@ -14,40 +23,38 @@ OBJ_PATH	=		objs
 
 
 ## ALL FILES
-SRC_FILES	=	Phonebook.cpp			\
-				Contact.cpp				\
-				main.cpp
+SRC_FILES	=		PhoneBook.cpp			\
+					Contact.cpp				\
+					main.cpp
 
 ## PREP
+SRCS		:=		$(addprefix $(SRC_PATH)/,$(SRC_FILES)) \
 
-SRCS		:=		$(addprefix $(SRC_PATH)/,$(SRC_FILES))
+OBJS 		=		$(patsubst $(SRC_PATH)/%.cpp,$(OBJ_PATH)/%.o,$(SRCS))
 
-OBJS 		=	$(patsubst $(SRC_PATH)/%.cpp,$(OBJ_PATH)/%.o,$(SRCS))
+INCS		= 		-I$(INC_PATH)
 
-INCS		=	-I$(INC_PATH)
-
-
-## RECIPES
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	@$(COMP) $(FLAGS) $(OBJS) $(INCS) -o $(NAME)
+	$(COMP) $(FLAGS) $(OBJS) $(INCS) -o $(NAME)
 	@echo Program $(NAME) ready!!
 
 $(OBJ_PATH)/%.o: $(SRC_PATH)/%.cpp
 	mkdir -p $(dir $@)
-	@echo new folder!
 	$(COMP) $(FLAGS) $(INCS) -c $< -o $@
 
 clean:
 	@if [ -d "$(OBJ_PATH)" ]; then \
         rm -rf $(OBJ_PATH); \
     fi
+	@echo Objects successfully deleted!
 
 fclean: clean
 	@if [ -e "$(NAME)" ]; then \
         rm $(NAME); \
     fi
+	@echo Done!!
 
 re: fclean all
 
