--- a/cpp00/ex02/Makefile
+++ b/cpp00/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: codespace <codespace@student.42.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/27 11:17:51 by codespace         #+#    #+#              #
-#    Updated: 2023/12/27 13:41:26 by codespace        ###   ########.fr        #
+#    Updated: 2023/12/27 14:04:19 by codespace        ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -19,9 +19,7 @@ FLAGS		=		-Wall -Wextra -Werror -std=c++98 -fsanitize=address -g
 
 ## ALL FILES
 
-SRCS		=		Account.cpp		\
-					tests.cpp
-
+SRCS		=		*.cpp
 OBJS 		=		$(patsubst %.cpp,%.o,$(SRCS))
 
 INC_PATH	= ./
