--- a/cpp02/ex01/Makefile
+++ b/cpp02/ex01/Makefile
@@ -6,12 +6,12 @@
 #    By: codespace <codespace@student.42.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/27 11:17:51 by codespace         #+#    #+#              #
-#    Updated: 2023/12/27 17:24:14 by codespace        ###   ########.fr        #
+#    Updated: 2023/12/28 11:05:21 by codespace        ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 ##	Program Name
-NAME 		=		violence
+NAME 		=		fixed_point_ex01
 
 ##	Compiler and flags
 COMP		=		c++
