--- a/cpp02/ex02/Makefile
+++ b/cpp02/ex02/Makefile
@@ -5,42 +5,53 @@
 #                                                     +:+ +:+         +:+      #
 #    By: codespace <codespace@student.42.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2023/12/27 11:17:51 by codespace         #+#    #+#              #
-#    Updated: 2023/12/28 13:06:41 by codespace        ###   ########.fr        #
+#    Created: 2023/12/27 11:53:05 by codespace         #+#    #+#              #
+#    Updated: 2023/12/28 15:25:50 by codespace        ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-##	Program Name
-NAME 		=		fixed_point_ex02
+NAME 		=		fixed_point_02
 
 ##	Compiler and flags
 COMP		=		c++
 FLAGS		=		-Wall -Wextra -Werror -std=c++98 -fsanitize=address -g
 
+## FOLDERS
+INC_PATH	=		incs
+SRC_PATH	=		srcs
+OBJ_PATH	=		objs
+
+
 ## ALL FILES
+SRC_FILES		=		main.cpp	\
+						Fixed.cpp	\
 
-SRCS		=		main.cpp	\
-					Fixed.cpp	\
+## PREP
+SRCS		:=		$(addprefix $(SRC_PATH)/,$(SRC_FILES)) \
 
-OBJS 		=		$(patsubst %.cpp,%.o,$(SRCS))
+OBJS 		=		$(patsubst $(SRC_PATH)/%.cpp,$(OBJ_PATH)/%.o,$(SRCS))
 
-INCS		=		-I./
+INCS		= 		-I$(INC_PATH)
 
-## RECIPES
 all: $(NAME)
 
 $(NAME): $(OBJS)
 	@$(COMP) $(FLAGS) $(OBJS) $(INCS) -o $(NAME)
 	@echo Program $(NAME) ready!!
 
-$(OBJS): %.o: %.cpp
+$(OBJ_PATH)/%.o: $(SRC_PATH)/%.cpp
+	@mkdir -p $(dir $@)
 	@$(COMP) $(FLAGS) $(INCS) -c $< -o $@
 
 clean:
-	@rm -f $(OBJS)
+	@if [ -d "$(OBJ_PATH)" ]; then \
+        rm -rf $(OBJ_PATH); \
+    fi
 
 fclean: clean
-	@rm -f $(NAME)
+	@if [ -e "$(NAME)" ]; then \
+        rm $(NAME); \
+    fi
 
 re: fclean all
 
