--- a/cpp03/ex00/Makefile
+++ b/cpp03/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: codespace <codespace@student.42.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/27 11:53:05 by codespace         #+#    #+#              #
-#    Updated: 2023/12/28 15:39:17 by codespace        ###   ########.fr        #
+#    Updated: 2023/12/28 15:39:51 by codespace        ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -24,7 +24,7 @@ OBJ_PATH	=		objs
 
 ## ALL FILES
 SRC_FILES		=		main.cpp		\
-						ClapTrap.cpp	\
+						ClapTrap.cpp
 
 ## PREP
 SRCS		:=		$(addprefix $(SRC_PATH)/,$(SRC_FILES)) \
