--- a/cpp03/ex00/Makefile
+++ b/cpp03/ex00/Makefile
@@ -1,13 +1,13 @@
 # **************************************************************************** #
-#                                                                              #
-#                                                         :::      ::::::::    #
-#    Makefile                                           :+:      :+:    :+:    #
-#                                                     +:+ +:+         +:+      #
-#    By: codespace <codespace@student.42.fr>        +#+  +:+       +#+         #
-#                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2023/12/27 11:53:05 by codespace         #+#    #+#              #
-#    Updated: 2023/12/28 15:39:51 by codespace        ###   ########.fr        #
-#                                                                              #
+#											 #
+#								 :::      ::::::::    #
+#    Makefile						 :+:      :+:    :+:    #
+#							    +:+ +:+	  +:+      #
+#    By: codespace <codespace@student.42.fr>	 +#+  +:+	+#+	  #
+#							+#+#+#+#+#+   +#+	     #
+#    Created: 2023/12/27 11:53:05 by codespace	  #+#    #+#		#
+#    Updated: 2023/12/28 15:47:20 by codespace	 ###   ########.fr	 #
+#											 #
 # **************************************************************************** #
 
 NAME 		=		claptrap
@@ -24,7 +24,8 @@ OBJ_PATH	=		objs
 
 ## ALL FILES
 SRC_FILES		=		main.cpp		\
-						ClapTrap.cpp
+						ClapTrap.cpp	\
+						ClapTrap_functions.cpp
 
 ## PREP
 SRCS		:=		$(addprefix $(SRC_PATH)/,$(SRC_FILES)) \
@@ -45,12 +46,12 @@ $(OBJ_PATH)/%.o: $(SRC_PATH)/%.cpp
 
 clean:
 	@if [ -d "$(OBJ_PATH)" ]; then \
-        rm -rf $(OBJ_PATH); \
+	 rm -rf $(OBJ_PATH); \
     fi
 
 fclean: clean
 	@if [ -e "$(NAME)" ]; then \
-        rm $(NAME); \
+	 rm $(NAME); \
     fi
 
 re: fclean all
