--- a/cpp03/ex03/Makefile
+++ b/cpp03/ex03/Makefile
@@ -6,7 +6,7 @@
 #    By: codespace <codespace@student.42.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/28 16:36:42 by codespace         #+#    #+#              #
-#    Updated: 2024/01/09 12:25:27 by codespace        ###   ########.fr        #
+#    Updated: 2024/01/09 13:00:54 by codespace        ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -26,7 +26,9 @@ OBJ_PATH	=		objs
 SRC_FILES		=		main.cpp					\
 						ClapTrap.cpp				\
 						ClapTrap_functions.cpp		\
-						ScavTrap.cpp
+						ScavTrap.cpp				\
+						FragTrap.cpp				\
+						DiamondTrap.cpp
 
 ## PREP
 SRCS		:=		$(addprefix $(SRC_PATH)/,$(SRC_FILES)) \
