--- a/cpp04/ex01/Makefile
+++ b/cpp04/ex01/Makefile
@@ -28,7 +28,8 @@ SRC_FILES		=		main.cpp		\
 						Cat.cpp			\
 						Dog.cpp			\
 						WrongAnimal.cpp	\
-						WrongCat.cpp
+						WrongCat.cpp	\
+						Brain.cpp
 
 ## PREP
 SRCS		:=		$(addprefix $(SRC_PATH)/,$(SRC_FILES)) \
