--- a/cpp04/ex03/Makefile
+++ b/cpp04/ex03/Makefile
@@ -28,9 +28,7 @@ SRC_FILES		=		main.cpp			\
 						Ice.cpp				\
 						Cure.cpp			\
 						Character.cpp		\
-						ICharacter.cpp		\
-						MateriaSource.cpp	\
-						IMateriaSource.cpp
+						MateriaSource.cpp
 
 
 ## PREP
