--- a/cpp04/ex03/Makefile
+++ b/cpp04/ex03/Makefile
@@ -71,7 +71,7 @@ re: fclean all
 git: fclean
 	@git add . && git commit -m "commiting" && git push
 
-run: re
+run: $(NAME)
 	@./$(NAME)
 
 .PHONY: clean fclean re git run
