--- a/cpp00/ex02/Makefile
+++ b/cpp00/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: codespace <codespace@student.42.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/28 15:56:19 by codespace         #+#    #+#              #
-#    Updated: 2023/12/28 15:56:26 by codespace        ###   ########.fr        #
+#    Updated: 2024/03/12 16:39:49 by codespace        ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -36,11 +36,11 @@ INCS		= 		-I$(INC_PATH)
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	@$(COMP) $(FLAGS) $(OBJS) $(INCS) -o $(NAME)
+	$(COMP) $(FLAGS) $(OBJS) $(INCS) -o $(NAME)
 
 $(OBJ_PATH)/%.o: $(SRC_PATH)/%.cpp
 	@mkdir -p $(dir $@)
-	@$(COMP) $(FLAGS) $(INCS) -c $< -o $@
+	$(COMP) $(FLAGS) $(INCS) -c $< -o $@
 
 clean:
 	@if [ -d "$(OBJ_PATH)" ]; then \
