--- a/cpp04/ex03/Makefile
+++ b/cpp04/ex03/Makefile
@@ -1,13 +1,13 @@
 # **************************************************************************** #
-#											 #
-#								 :::      ::::::::    #
-#    Makefile						 :+:      :+:    :+:    #
-#							    +:+ +:+	  +:+      #
-#    By: codespace <codespace@student.42.fr>	 +#+  +:+	+#+	  #
-#							+#+#+#+#+#+   +#+	     #
-#    Created: 2023/12/27 11:53:05 by codespace	  #+#    #+#		#
-#    Updated: 2023/12/28 15:41:23 by codespace	 ###   ########.fr	 #
-#											 #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: codespace <codespace@student.42.fr>        +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/03/12 16:42:30 by codespace         #+#    #+#              #
+#    Updated: 2024/03/12 16:42:31 by codespace        ###   ########.fr        #
+#                                                                              #
 # **************************************************************************** #
 
 NAME 		=		materia
@@ -49,12 +49,12 @@ OBJS 		=		$(patsubst $(SRC_PATH)/%.cpp,$(OBJ_PATH)/%.o,$(SRCS))
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	@$(COMP) $(FLAGS) $(OBJS) -I$(INC_PATH) -o $(NAME)
-	@echo Program $(NAME) ready!!
+	$(COMP) $(FLAGS) $(OBJS) -I$(INC_PATH) -o $(NAME)
+	echo Program $(NAME) ready!!
 
 $(OBJ_PATH)/%.o: $(SRC_PATH)/%.cpp $(INCS)
-	@mkdir -p $(dir $@)
-	@$(COMP) $(FLAGS) -I$(INC_PATH) -c $< -o $@
+	mkdir -p $(dir $@)
+	$(COMP) $(FLAGS) -I$(INC_PATH) -c $< -o $@
 
 clean:
 	@if [ -d "$(OBJ_PATH)" ]; then \
