--- a/cpp03/ex01/Makefile
+++ b/cpp03/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: codespace <codespace@student.42.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/28 16:36:42 by codespace         #+#    #+#              #
-#    Updated: 2024/03/12 16:39:49 by codespace        ###   ########.fr        #
+#    Updated: 2024/04/01 08:54:04 by codespace        ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -23,12 +23,19 @@ OBJ_PATH	=		objs
 
 
 ## ALL FILES
+
+INC_FILES		=		ClapTrap.hpp				\
+						ScavTrap.hpp
+
 SRC_FILES		=		main.cpp					\
 						ClapTrap.cpp				\
 						ClapTrap_functions.cpp		\
 						ScavTrap.cpp
 
 ## PREP
+
+ALL_INCS	:=		$(addprefix $(INC_PATH)/,$(INC_FILES))
+
 SRCS		:=		$(addprefix $(SRC_PATH)/,$(SRC_FILES)) \
 
 OBJS 		=		$(patsubst $(SRC_PATH)/%.cpp,$(OBJ_PATH)/%.o,$(SRCS))
@@ -41,7 +48,7 @@ $(NAME): $(OBJS)
 	$(COMP) $(FLAGS) $(OBJS) $(INCS) -o $(NAME)
 	@echo Program $(NAME) ready!!
 
-$(OBJ_PATH)/%.o: $(SRC_PATH)/%.cpp
+$(OBJ_PATH)/%.o: $(SRC_PATH)/%.cpp $(ALL_INCS)
 	@mkdir -p $(dir $@)
 	$(COMP) $(FLAGS) $(INCS) -c $< -o $@
 
@@ -60,7 +67,7 @@ re: fclean all
 git: fclean
 	@git add . && git commit -m "commiting" && git push
 
-run: re
+run: all
 	@./$(NAME)
 
 .PHONY: clean fclean re git run
