--- a/cpp04/ex00/Makefile
+++ b/cpp04/ex00/Makefile
@@ -23,6 +23,13 @@ OBJ_PATH	=		objs
 
 
 ## ALL FILES
+
+INC_FILES		=		Animal.hpp		\
+						Cat.hpp			\
+						Dog.hpp			\
+						WrongAnimal.hpp	\
+						WrongCat.hpp
+
 SRC_FILES		=		main.cpp		\
 						Animal.cpp		\
 						Cat.cpp			\
@@ -31,6 +38,8 @@ SRC_FILES		=		main.cpp		\
 						WrongCat.cpp
 
 ## PREP
+ALL_INCS	:=		$(addprefix $(INC_PATH)/,$(INC_FILES))
+
 SRCS		:=		$(addprefix $(SRC_PATH)/,$(SRC_FILES)) \
 
 OBJS 		=		$(patsubst $(SRC_PATH)/%.cpp,$(OBJ_PATH)/%.o,$(SRCS))
@@ -43,7 +52,7 @@ $(NAME): $(OBJS)
 	$(COMP) $(FLAGS) $(OBJS) $(INCS) -o $(NAME)
 	@echo Program $(NAME) ready!!
 
-$(OBJ_PATH)/%.o: $(SRC_PATH)/%.cpp
+$(OBJ_PATH)/%.o: $(SRC_PATH)/%.cpp $(ALL_INCS)
 	@mkdir -p $(dir $@)
 	$(COMP) $(FLAGS) $(INCS) -c $< -o $@
 
