--- a/cpp05/ex00/Makefile
+++ b/cpp05/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: codespace <codespace@student.42.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/03/12 16:42:30 by codespace         #+#    #+#              #
-#    Updated: 2024/04/05 14:14:12 by codespace        ###   ########.fr        #
+#    Updated: 2024/04/05 14:17:35 by codespace        ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,7 +15,7 @@ NAME 		=		bureaucrat
 ##	Compiler and flags
 COMP		=		c++
 FLAGS		=		-Wall -Wextra -Werror -std=c++98 -fsanitize=address -g
-DEBUG_FLAGS	=		-DDEBUG
+DEBUG_FLAGS	=		-DDEBUG_CONSTRUCTOR
 
 ## FOLDERS
 INC_PATH	=		incs
