--- a/cpp05/ex01/Makefile
+++ b/cpp05/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: codespace <codespace@student.42.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/03/12 16:42:30 by codespace         #+#    #+#              #
-#    Updated: 2024/04/08 10:00:19 by codespace        ###   ########.fr        #
+#    Updated: 2024/04/08 11:57:44 by codespace        ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -25,14 +25,18 @@ OBJ_PATH	=		objs
 
 ## ALL FILES
 
-INC_FILES		=		Bureaucrat.hpp
+INC_FILES		=		Bureaucrat.hpp		\
+						Form.hpp
 
 
+SRC_FILES		=		main.cpp					\
+						Bureaucrat.cpp				\
+						Bureaucrat_funcs.cpp		\
+						Bureaucrat_exceptions.cpp	\
+						Form.cpp					\
+						Form_funcs.cpp				\
+						Form_exceptions.cpp
 
-SRC_FILES		=		main.cpp			\
-						Bureaucrat.cpp		\
-						Bureaucrat_funcs.cpp	\
-						Bureaucrat_exceptions.cpp
 
 
 ## PREP
