--- a/cpp05/ex02/Makefile
+++ b/cpp05/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: codespace <codespace@student.42.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/03/12 16:42:30 by codespace         #+#    #+#              #
-#    Updated: 2024/04/09 11:34:35 by codespace        ###   ########.fr        #
+#    Updated: 2024/04/09 11:46:30 by codespace        ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -26,7 +26,8 @@ OBJ_PATH	=		objs
 ## ALL FILES
 
 INC_FILES		=		Bureaucrat.hpp		\
-						AForm.hpp
+						AForm.hpp			\
+						PresidentialPardonForm.hpp
 
 
 SRC_FILES		=		main.cpp					\
@@ -35,7 +36,8 @@ SRC_FILES		=		main.cpp					\
 						Bureaucrat_exceptions.cpp	\
 						AForm.cpp					\
 						AForm_funcs.cpp				\
-						AForm_exceptions.cpp
+						AForm_exceptions.cpp		\
+						PresidentialPardonForm.cpp
 
 
 
