--- a/cpp05/ex02/Makefile
+++ b/cpp05/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: codespace <codespace@student.42.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/03/12 16:42:30 by codespace         #+#    #+#              #
-#    Updated: 2024/04/09 11:46:30 by codespace        ###   ########.fr        #
+#    Updated: 2024/04/09 14:18:12 by codespace        ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -27,7 +27,9 @@ OBJ_PATH	=		objs
 
 INC_FILES		=		Bureaucrat.hpp		\
 						AForm.hpp			\
-						PresidentialPardonForm.hpp
+						PresidentialPardonForm.hpp	\
+						ShrubberyCreationForm.hpp	\
+						RobotomyRequestForm.hpp
 
 
 SRC_FILES		=		main.cpp					\
@@ -37,7 +39,9 @@ SRC_FILES		=		main.cpp					\
 						AForm.cpp					\
 						AForm_funcs.cpp				\
 						AForm_exceptions.cpp		\
-						PresidentialPardonForm.cpp
+						PresidentialPardonForm.cpp	\
+						ShrubberyCreationForm.cpp	\
+						RobotomyRequestForm.cpp
 
 
 
