--- a/cpp06/ex01/Makefile
+++ b/cpp06/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: codespace <codespace@student.42.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/03/12 16:42:30 by codespace         #+#    #+#              #
-#    Updated: 2024/04/10 13:29:09 by codespace        ###   ########.fr        #
+#    Updated: 2024/04/11 10:41:30 by codespace        ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -26,11 +26,13 @@ OBJ_PATH	=		objs
 
 ## ALL FILES
 
-INC_FILES		=		ScalarConverter.hpp
+INC_FILES		=		Data.hpp					\
+						Serializer.hpp
 
 
 SRC_FILES		=		main.cpp					\
-						ScalarConverter.cpp
+						Data.cpp					\
+						Serializer.cpp
 
 
 
