--- a/cpp07/ex02/Makefile
+++ b/cpp07/ex02/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: manuel <manuel@student.42.fr>              +#+  +:+       +#+         #
+#    By: codespace <codespace@student.42.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/03/12 16:42:30 by codespace         #+#    #+#              #
-#    Updated: 2024/04/12 15:45:50 by manuel           ###   ########.fr        #
+#    Updated: 2024/04/16 14:53:58 by codespace        ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -26,11 +26,11 @@ OBJ_PATH	=		objs
 
 ## ALL FILES
 
-INC_FILES		=		whatever.hpp
+INC_FILES		=		Array.hpp					\
+						Array.tpp
 
 
-SRC_FILES		=		main.cpp					\
-						whatever.cpp
+SRC_FILES		=		main.cpp
 
 
 
