--- a/cpp09/ex01/Makefile
+++ b/cpp09/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: manuel <manuel@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/03/12 16:42:30 by codespace         #+#    #+#              #
-#    Updated: 2024/04/19 11:36:51 by manuel           ###   ########.fr        #
+#    Updated: 2024/04/19 12:45:20 by manuel           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -32,7 +32,7 @@ INC_FILES		=		RPN.hpp
 
 SRC_FILES		=		main.cpp		\
 						RPN.cpp			\
-						RPN_parsing.cpp
+						RPN_funcs.cpp
 
 
 
